feat: add historical repository and minor adjustments
