# api-service/src/infrastructure/database/user/user-schema.ts
@@ -1,12 +1,15 @@
 import { EntitySchema } from "typeorm";
 import { User } from "../../../domain/entities/User";
+import { RoleEnum } from "../../../domain/enums/Role";
 
 export const UserEntity = new EntitySchema<User>({
-  name: "users",
+  name: "user",
+  tableName: "users",
   columns: {
-    name: { type: "text" },
-    role: { type: "text" },
-    id: { type: "text" },
+    email: { type: "text" },
+    password: { type: "text" },
+    role: { type: "enum", enum: RoleEnum },
+    id: { type: "text", primary: true },
     createdAt: { type: "timestamp" },
   },
 });
